# AI-coding-portfolio

./: README.md
meeting_room/: README.md  前后端开发架构.md  开发总结.md  开发规划.md  测试报告.md  测试指南.md  运行指南.md  需求覆盖测试报告.md
meeting_room/app/: __init__.py  config.py  (+4 more)
oj_system/: README.md  高松灯的收藏.md
ticket_assign/: README.md  pyproject.toml  requirements.txt  开发总结.md  开发规划.md  测试报告.md  运行指南.md
ticket_assign/outputs/metrics/: benchmark_results.json
ticket_assign/scenarios/: least_loaded_compare.json  minimal.json  offline_requeue.json  peak_load.json  priority_compare.json  reroute_case.json
ticket_assign/scripts/: run_benchmark.py  run_simulation.py
ticket_assign/src/ticket_assign/: __init__.py  main.py
ticket_assign/src/ticket_assign/config/: __init__.py  scenario_loader.py  settings.py
ticket_assign/src/ticket_assign/dispatcher/: __init__.py  balanced_dispatcher.py  base.py  fifo.py  least_loaded.py  priority_first.py
ticket_assign/src/ticket_assign/domain/: agent.py  assignment.py  enums.py  event.py  ticket.py
ticket_assign/src/ticket_assign/metrics/: __init__.py  calculators.py  collector.py  models.py
ticket_assign/src/ticket_assign/reporting/: __init__.py  logger.py  report_builder.py
ticket_assign/src/ticket_assign/scheduler/: __init__.py  assignment_engine.py  queue_manager.py  reroute_manager.py
ticket_assign/src/ticket_assign/simulator/: __init__.py  engine.py  event_queue.py  generators.py  state.py
ticket_assign/tests/integration/: test_benchmark_report.py
ticket_assign/tests/unit/: test_metrics.py  test_scenario_loader.py  test_simulator.py
(+109 files in other folders)
